# rawfie_interface

./: CMakeLists.txt  CMakeLists.txt~  README.md  package.xml  setup.py
Avro_Schemas/: UxVHealthStatus.avsc  UxVHealthStatusEnum.avsc  angular_velocity.avsc  cpu_usage.avsc  current.avsc  sensor_type.avsc
Avro_Schemas/commands/: goto.avsc  keep_station.avsc
Avro_Schemas/uxv/: AngularVelocity.avsc  Attitude.avsc  CpuUsage.avsc  FuelUsage.avsc  Header.avsc  LaserScan.avsc  LinearVelocity.avsc  Location.avsc  SensorReadingScalar.avsc  StorageUsage.avsc  SystemInfo.avsc  SystemType.avsc  Unit.avsc  Voltage.avsc  angular_velocity.avsc  attitude.avsc  cpu_usage.avsc  current.avsc  fuel_usage.avsc  laser_scan.avsc  linear_acceleration.avsc  linear_velocity.avsc  occupancy_grid.avsc  sensor_info.avsc  sensor_reading_scalar.avsc  storage_usage.avsc  system_info.avsc  voltage.avsc
include/: abort.hh  angular_velocity.hh  attitude.hh  cpu_usage.hh  current.hh  fuel_usage.hh  goto.hh  header.hh  keep_station.hh  laser_scan.hh  linear_acceleration.hh  linear_velocity.hh  location.hh  occupancy_grid.hh  rdkafka_consumer.h  rdkafka_producer.h  sensor_info.hh  sensor_reading_scalar.hh  sensor_type.hh  storage_usage.hh  system_info.hh  system_type.hh  unit.hh  voltage.hh
launch/: RwfInterface.launch
src/: RwfInterface.cpp  WGS.py  rdkafka_consumer.cpp  rdkafka_producer.cpp  ros_kafka_consumer.py  ros_kafka_consumer_srv.py  ros_kafka_consumer_xy.py  ros_kafka_producer.py
src/Avro_Schemas/: fuel_usage.avsc  laser_scan.avsc  (+5 more)
testing/: consumer_test.py  producer_test.py  producer_test_original.py
uxv/: attitude.avsc  header.avsc  linear_acceleration.avsc  sensor_info.avsc  storage_usage.avsc  unit.avsc  voltage.avsc
(+2 files in other folders)
